# dllm

./: .gitignore  cpu-simulation.py  dataset.py  encoding.py  eval_train.py  fold_sequences.py  graph.py  loss.py  main.py  noise.py  plot.py  pyproject.toml  readme.md  readme.txt  reverse.py  score.py  scorenet.py  sedd.py  tokenizer.py  util.py
samples/: clean_new_proteins_found.csv  fold_results.csv  proteins.csv
